# FI-CAD-Predictor

./: .gitignore  AGENTS.md  PLANS.md  PROGRESS.md  README.md  check_python.py  main.py  pyproject.toml  requirements.txt  run_api.bat  run_project.bat  setup_env.bat  对照清单.md  对照清单_比对报告.md  环境说明.md
configs/: api_config.yaml  model_config.yaml  modeling.yaml  paths.yaml  pycaret_config.yaml  pycaret_model_config.yaml  variables.yaml  viz_config.yaml
data/: .gitignore  MANIFEST.md
data/audit/: charls_data_audit.json
data/cleaned/: basic_cleaned_data.csv
data/raw/: .gitignore  2011年FI+CVD及变量.csv  2011年FI+CVD及变量新.csv  2011年协变量.csv
docs/: charls_data_assets.md  方案探讨.md
frontend/src/: App.css  App.tsx
output/datasets/: modeling_dataset.parquet
output/results/: pycaret_adaboostclassifier_predict.csv  pycaret_extratreesclassifier_predict.csv  pycaret_gaussiannb_predict.csv  pycaret_gradientboostingclassifier_predict.csv  pycaret_lgbmclassifier_predict.csv  pycaret_lineardiscriminantanalysis_predict.csv  pycaret_logisticregression_predict.csv  pycaret_model_metrics.csv  pycaret_quadraticdiscriminantanalysis_predict.csv  pycaret_randomforestclassifier_predict.csv  pycaret_ridgeclassifier_predict.csv
output/runs/: latest.txt
output/tables/: feature_missingness.csv  high_correlation_pairs.csv  (+2 more)
scripts/: charls_data.py  update_charls_data.py
src/: AutoML.py  __init__.py  feature_selection.py  manual_model_train.py  model_visualization.py  preprocessing.py  ridgeclassifier_shap_visualization.py  train_model.py
tests/: test_charls_data.py  test_fi_cad_pipeline.py
(+1467 files in other folders)
