[project]
name = "fi-cad-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "catboost==1.2",
    "fastapi==0.99.1",
    "joblib==1.2.0",
    "lightgbm==3.3.5",
    "numpy==1.24.3",
    "pandas==1.5.3",
    "pycaret>=3.0.0",
    "pyyaml==6.0",
    "scikit-learn==1.3.2",
    "scipy==1.10.1",
    "uvicorn==0.22.0",
    "xgboost==1.7.5",
]
