[project]
name = "fi-cad-predictor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "catboost>=1.2",
  "joblib>=1.2",
  "lightgbm>=3.3",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "optuna>=3.2",
  "pandas>=1.5",
  "pyarrow>=24.0",
  "pyreadstat>=1.3",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "shap>=0.44",
  "tabulate>=0.9",
  "xgboost>=1.7",
]
